Remove fixed position for background
Made sure that the all details were displayed instead of getting cut off

--- a/src/styles/myStyles.css
+++ b/src/styles/myStyles.css
@@ -17,8 +17,6 @@ div.MainPage{
 div.Background { 
     background-image: url('2753315.jpg');
     background-color: white;
-    position: fixed;
-    overflow-y: scroll;
     background-position: center;
     background-size: fill;
     background-repeat: no-repeat;
